convert/objects/sf_devops__Change_Bundle_Install__c.object
<CustomObject>
    <description>Represents the installation of a change bundle into an environment.</description>
    <label>Change Bundle Install</label>
    <nameField>
        <displayFormat>CBI-{000000}</displayFormat>
        <label>Change Bundle Install Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Bundle Installs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>sf_devops__Change_Bundle__c</fullName>
        <description>The bundle that was installed</description>
        <label>Change Bundle</label>
        <referenceTo>sf_devops__Change_Bundle__c</referenceTo>
        <relationshipLabel>Change Bundle Installs</relationshipLabel>
        <relationshipName>Change_Bundle_Installs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_devops__Deployment_Result__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The results of our deployment into the target stage</description>
        <label>Deployment Result</label>
        <referenceTo>sf_devops__Deployment_Result__c</referenceTo>
        <relationshipLabel>Change Bundle Installs</relationshipLabel>
        <relationshipName>Change_Bundle_Installs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A reference to the environment this is installed into</description>
        <label>Environment</label>
        <referenceTo>sf_devops__Environment__c</referenceTo>
        <relationshipLabel>Change Bundle Installs</relationshipLabel>
        <relationshipName>Change_Bundle_Installs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Merge_Result__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Merge Result</label>
        <referenceTo>sf_devops__Merge_Result__c</referenceTo>
        <relationshipLabel>Change Bundle Installs</relationshipLabel>
        <relationshipName>Change_Bundle_Installs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Async feedback for use during the installation operation.</description>
        <label>Status</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Change Bundle Installs</relationshipLabel>
        <relationshipName>Change_Bundle_Installs</relationshipName>
        <type>Lookup</type>
    </fields>
    <validationRules>
        <fullName>sf_devops__Project_Reference</fullName>
        <active>true</active>
        <description>Enforce Our Change Bundle and Environment are from the same project.</description>
        <errorConditionFormula>AND(
ISNEW(),
sf_devops__Change_Bundle__r.sf_devops__Project__c &lt;&gt; sf_devops__Environment__r.sf_devops__Project__c

)</errorConditionFormula>
        <errorMessage>A Change Bundle Install must reference an Environment and Change Bundle from the same Project.</errorMessage>
    </validationRules>
</CustomObject>